--- a/Morpion le jeu.html
+++ b/Morpion le jeu.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -80,6 +81,14 @@
         .restart-btn:hover {
             background-color: #1976D2;
         }
+        .footer {
+            margin-top: 20px;
+            font-size: 0.8rem;
+            color: #fff;
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 5px 10px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -91,6 +100,9 @@
     <div class="cookie-banner" id="cookieBanner">
         <span>Ce site utilise des cookies pour améliorer votre expérience. En continuant, vous acceptez notre politique.</span>
         <button id="acceptCookies">Accepter</button>
+    </div>
+    <div class="footer">
+        © 2024 Jeu du Morpion. Créé par NKDu3130. Je garde les droits !
     </div>
     <audio id="xSound" src="x-sound.mp3"></audio>
     <audio id="oSound" src="o-sound.mp3"></audio>
